--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -89,11 +89,12 @@ park:
 coaster_ranking:
     title: 'World Roller Coaster Rankings'
     description: 'Discover the world''s best coasters, with our monthly World Roller Coaster Rankings. Based on thousands of ratings and reviews, from 3000 users worldwide.'
-    duel_number: '1 duel|{count} duels'
+    duel_number: '{ count, plural, one { # duel } other { # duels }}'
     no_results: 'No coasters found!'
     info:
         title: 'Last Updated: {rankingMonth}'
         next: 'Next update {date}'
+        learn_more: 'Learn more about the ranking'
         coasters_ranked:
             short: 'coasters'
             long: 'ranked coasters'
