--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -55,12 +55,35 @@ coaster:
     location: 'Localización'
 
 park:
-    opened_coasters: '{ count, plural, one { montaña rusa abierta } other { montaña rusa abierta }}'
-    kiddies: '{ count, plural, one { montaña rusa infantil } other { montaña rusa infantil }}'
+    opened_coasters: '{ count, plural, one { montaña rusa abierta } other { montañas rusas abierta }}'
+    kiddies: '{ count, plural, one { montaña rusa infantil } other { montañas rusas infantiles }}'
 
 coaster_ranking:
-    title: 'Clasificación de las mejores montañas rusas - {rankingMonth}'
+    title: 'Clasificación mundial de montañas rusas'
     description: 'Clasificación de las mejores montañas rusas del mundo por nuestros usuarios. Envíe un comentario y califique las montañas rusas que ha montado para participar.'
+    duel_number: '{ count, plural, one { # duelo } other { # duelos }}'
+    no_results: '¡ no se han encontrado montañas rusas !'
+    info:
+        title: 'Última actualización: {rankingMonth}'
+        next: 'Próxima actualización {date}'
+        learn_more: 'Más información sobre la clasificación'
+        coasters_ranked:
+            short: 'montañas rusas'
+            long: 'montañas rusas clasificados'
+        ratings: 'clasificaciones'
+        comparisons:
+            short: 'pares'
+            long: 'pares analizados'
+        users: 'votantes'
+    filter:
+        title: 'Filtros'
+        manufacturer: 'Fabricante'
+        status: 'Operando'
+        kiddie: 'Ocultar Montañas rusas infantil'
+        notridden: 'No montado todavía'
+        score: 'Resultado'
+        atleast: 'al menos {count}'
+        openingDate: 'Fecha de apertura'
 
 map_index:
     title: 'Mapa de montañas rusas'
