--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -41,7 +41,7 @@ coaster:
         ratings: 'notes'
     infos:
         title: 'Caractéristiques de {name}'
-        closeParksTitle: 'Les meilleurs parcs d''attractions proche de {parkName}'
+        closeParksTitle: 'Les meilleurs parcs d''attractions proches de {parkName}'
         closeParksLink: 'Visualiser {parkName} sur la carte'
         status: 'Statut'
         park: 'Parc'
