#82 imperial statistics for english locale (#105)
* [#82] - Display closest parks distances in imperial for EN locale

* [#82] - Use Twig global variables & filters to display imperial unity

* [#82] - Fix translations

* [#82] - Remove unused class & rename UnitsExtension

* Conversions in twig extension

* Fix twig functions names

* Fix merge

* Fix functions

* Fix indent in twig files

* Add spanish translations

* Fix coaster distance translation

* Revert to old functions

* Fix types

* Fix distance

---------

Co-authored-by: Florian Blond <florian.blond@gmail.com>
Co-authored-by: Richard Crété <r.crete@numendo.com>

--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -205,6 +205,10 @@ notif:
 
 search_index:
     title: 'Busca una montaña rusa'
+    num_found: '{num} montañas rusas encontradas'
+    geo_on: 'Geolocalización activada'
+    geo_off: 'Geolocalización no activada'
+    km_away: 'a {distance}'
 
 badge:
     rating1: 'Primera nota'
