--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -322,7 +322,7 @@ search_index:
     num_found: '{num} coasters found'
     geo_on: 'Geolocation enabled'
     geo_off: 'Geolocation not enabled'
-    km_away: '{num} km away'
+    km_away: '{distance} away'
 
 image:
     credit: 'Credit: {name}'
