--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -324,7 +324,7 @@ search_index:
     num_found: '{num} coasters trouvés'
     geo_on: 'Localisation activée'
     geo_off: 'Localisation désactivée'
-    km_away: '{num} km'
+    km_away: 'à {distance}'
 
 badge:
     rating1: '1ère note'
