--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -15,7 +15,7 @@ index:
     description: 'Guide participatif pour découvrir, noter, et donner ton avis sur tous les coasters. Le classement des meilleurs coasters du monde est mis à jour chaque mois !'
     header:
         title: 'Notes, avis et classement des meilleurs coasters'
-        info: 'Space Mountain, c''est vraiment Hyper ? Que pensent les connaisseurs d''Oziris au Parc Asterix ? Où sont les Intamin qui ouvriront l''année prochaine ? Pas de panique, toutes les réponses sont ici ! Et pour en profiter, c''est très rapide : <b>2 clics suffisent pour <a href="{link_path}">se connecter</a>.</b> Suivez le Captain !'
+        info: 'Captain Coaster est le guide ultime pour les passionnés de montagnes russes! Notez, rédigez des avis, et créez des tops pour les coasters que vous avez fait. <a href="{link_path}">Rejoignez-nous</a> pour façonner le classement des meilleures montagnes russes du monde!'
     stats:
         ratings: 'notes'
         reviews: 'avis'
@@ -285,13 +285,13 @@ footer:
 
 login:
     title: 'Se connecter'
-    facebook_connect: 'Connexion avec Facebook'
-    google_connect: 'Connexion avec Google'
-    info:
-        title: 'Pilule bleue ou pilule rouge ?'
-        text: 'Tu peux te connecter via ton compte Facebook, ou Google. Nous ne collectons que ton nom, ton email et ta photo de profil. Nous ne publions pas sur Facebook.'
-    already_connected_as: 'Déjà connecté en tant que'
-    logout: 'Se deconnecter ?'
+    subtitle: 'Envoyer un lien de connexion par email'
+    send_link: 'Envoyer le lien'
+    or_sign_in_with: 'ou se connecter avec'
+    terms: 'En continuant, vous confirmez avoir lu nos <a href="{link_path}">Termes et Conditions</a>'
+    email:
+        title: 'Connexion à Captain Coaster'
+    link_sent: 'Lien de connexion envoyé à {email}. Vérifiez votre email et cliquez sur le lien pour vous connecter.'
 
 contact:
     title: 'Nous contacter'
