[#108] - Add field to choose units system for connected user

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -158,6 +158,10 @@ me:
         homePark:
             label: 'Mein Heimatpark'
             placeholder: 'Wähle einen aus'
+        units:
+            metric: 'Internationale Einheitensystem'
+            imperial: 'Britische Einheitensystem'
+            label: 'Anzeigen von Entfernungen und Statistiken in'
         addTodayDateWhenRating:
             label: 'Füge das heutige Datum zu einer Bewertung hinzu'
         apiKey:
