Adding youtube embed to coaster page

--- a/translations/messages+intl-icu.de.yml
+++ b/translations/messages+intl-icu.de.yml
@@ -54,6 +54,8 @@ coaster:
         kiddie: 'Kinder'
         indoor: 'Indoor'
     parkcoaster: 'Auch in {name}'
+    video:
+        title: 'Onride Video'
     photos:
         title: 'Fotos'
         empty: 'Hoppla, wir haben noch keine Fotos von dieser Achterbahn, aber du kannst uns deine zusenden!'
