--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -294,6 +294,11 @@ login:
     link_sent: 'Lien de connexion envoyé à {email}. Vérifiez votre email et cliquez sur le lien pour vous connecter.'
     account_disabled: 'Votre email {email} n''est pas vérifié. Merci de vous <a href="{link_path}">inscrire</a> ou de cliquer sur le lien reçu après l''inscription pour activer votre compte.'
 
+register:
+    title: 'S''enregistrer'
+    subtitle: 'Créer un compte et le valider par email'
+    send_link: 'Envoyer le lien de confirmation'
+
 contact:
     title: 'Nous contacter'
     send: 'Envoyer le message'
