Email login / ajout page register (#121)
* Adding roles to user crud for super admin

* First step register user

* Adding check on login if account not enabled

* Modifying register html page & confirmation email

* typo & link from login to register

* Add message confirmation sent

* fix: php cs fixer

* php cs fixer 2

* php cs fixer 3

--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -290,13 +290,20 @@ footer:
 
 login:
     title: 'Login to Captain Coaster'
-    subtitle: 'Send a login link to your email'
+    subtitle: 'Send a login link to your email. If you do not have an account yet, <a href="{link_path}">register here</a>.'
     send_link: 'Send login link'
     or_sign_in_with: 'or sign in with'
     terms: 'By continuing, you''re confirming that you''ve read our <a href="{link_path}">Terms &amp; Conditions</a>'
     email:
         title: 'Login to Captain Coaster'
-    link_sent: 'Login link sent to {email}. Check your email and click on the link to login'
+    link_sent: 'Enlace de inicio de sesión enviado a {email}. Compruebe su correo electrónico y haga clic en el enlace para iniciar sesión'
+    account_disabled: 'Your email {email} has not been verified. Please <a href="{link_path}">register</a> or click on the link you received after registering to activate your account.'
+
+register:
+    title: 'Register'
+    subtitle: 'Create an account and verify it by email'
+    send_link: 'Send the confirmation link'
+    link_sent: 'Confirmation link sent to {email}. Please check your email and click on the link to activate your account.'
 
 contact:
     title: 'Get in touch'
