--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -215,11 +215,20 @@ footer:
 
 login:
     title: 'Iniciar sesión en Captain Coaster'
+    subtitle: 'Enviar un enlace de inicio de sesión a su correo electrónico. Si aún no tiene una cuenta, <a href="{link_path}">regístrese aquí</a>.'
     info:
         title: '¿ Pastilla azul o pastilla roja ?'
         text: 'Puede iniciar sesión con vuestra cuenta de Facebook o Google. Solo recopilamos vuestros nombre, correo electrónico y foto de perfil.'
     already_connected_as: 'Ya ha iniciado sesión como'
     logout: '¿ Cerrar sesión ?'
+    link_sent: 'Lien de connexion envoyé à {email}. Vérifiez votre email et cliquez sur le lien pour vous connecter.'
+    account_disabled: 'Su correo electrónico {email} no ha sido verificado. Por favor, <a href="{link_path}">regístrese</a> o haga clic en el enlace que recibió después de registrarse para activar su cuenta.'
+
+register:
+    title: 'Regístrese'
+    subtitle: 'Crear una cuenta y verificarla por correo electrónico'
+    send_link: 'Enviar el enlace de confirmación'
+    link_sent: 'Enlace de confirmación enviado a {email}. Compruebe su correo electrónico y haga clic en el enlace para activar su cuenta.'
 
 contact:
     title: 'Estar en contacto'
