--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -269,6 +269,7 @@ rating:
 navbar:
     profile: 'My profile'
     rating: 'My ratings'
+    login: 'Sign in'
     logout: 'Logout'
     tops: 'My tops'
     my_map: 'My map'
@@ -283,20 +284,26 @@ sidebar:
     review: 'Coaster Reviews'
     contact: 'Get in touch'
     logout: 'Logout'
-    login: 'Login'
+    login: 'Sign in'
 
 footer:
     terms: 'Privacy Policy'
 
 login:
-    title: 'Login to Captain Coaster'
-    subtitle: 'Send a login link to your email. If you do not have an account yet, <a href="{link_path}">register here</a>.'
+    title: 'Sign in to Captain Coaster'
+    subtitle: 'Send a login link to your email'
     send_link: 'Send login link'
-    or_sign_in_with: 'or sign in with'
-    terms: 'By continuing, you''re confirming that you''ve read our <a href="{link_path}">Terms &amp; Conditions</a>'
+    redirect_to_register: 'New to Captain Coaster? <a href="{link_path}">Create an account</a>'
+    or_sign_in_with: 'or'
+    connect_with_google: 'Connect with google'
+    terms: 'By continuing, you confirm that you accept our <a href="{link_path}">Terms &amp; Conditions</a>'
     email:
-        title: 'Login to Captain Coaster'
-    link_sent: 'Enlace de inicio de sesión enviado a {email}. Compruebe su correo electrónico y haga clic en el enlace para iniciar sesión'
+        title: 'Sign in to Captain Coaster'
+        h1: 'Hold on tight!'
+        paragraph1: 'To sign in to Captain Coaster, click the button below. This link will expire in 15 minutes.'
+        button: 'Sign in'
+        paragraph2: 'You received this email because you are trying to sign in to Captain Coaster. If you are not sure why you are receiving this, please contact us by replying to this email.'
+    link_sent: 'If an account is associated with {email}, you will receive a login link. Click on the link to sign in'
     account_disabled: 'Your email {email} has not been verified. Please <a href="{link_path}">register</a> or click on the link you received after registering to activate your account.'
 
 register:
@@ -304,6 +311,13 @@ register:
     subtitle: 'Create an account and verify it by email'
     send_link: 'Send the confirmation link'
     link_sent: 'Confirmation link sent to {email}. Please check your email and click on the link to activate your account.'
+    form:
+        email: 'Email'
+        first_name: 'First Name'
+        last_name: 'Last Name'
+        submit: 'Create an account'
+    email:
+        title: 'Please confirm your email'
 
 contact:
     title: 'Get in touch'
